docs(normalization): explanatory text towards filter averaging

--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -192,51 +192,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "274ab70c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
-       "        48.6861275],\n",
-       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
-       "        48.6861275],\n",
-       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
-       "        48.6861275],\n",
-       "       ...,\n",
-       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
-       "        48.6861275],\n",
-       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
-       "        48.6861275],\n",
-       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
-       "        48.6861275]])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "G = np.ones((1024*2,1024*2)) / 1024**2\n",
+    "G = np.ones((1024*2,1024*2)) / 1024**2 # have doubly sized kernel so that pixel reaches each pixel in the average\n",
     "\n",
-    "iRMS2 = np.ones(filters_output.shape)\n",
-    "o=3\n",
+    "i_RMS2 = np.ones(filters_output.shape)\n",
+    "o=3 # choose sample dimension\n",
     "s=4\n",
     "# calculate RMS using the filter\n",
     "norm = normalizers[o,s].copy()\n",
     "norm = norm ** 2\n",
     "mean = multyscale.filters.apply(norm, G, padval=0)\n",
-    "iRMS2[o,s] = iRMS2[o,s]*np.sqrt(mean)\n",
-    "# this replicates the just verified \n",
-    "assert(np.allclose(iRMS2[o,s], i_RMS[o,s]))"
+    "i_RMS2[o,s] = i_RMS2[o,s]*np.sqrt(mean)\n",
+    "# this replicates the just verified normalizing image\n",
+    "assert(np.allclose(i_RMS2[o,s], i_RMS[o,s]))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c597a480",
+   "id": "82795b62",
    "metadata": {},
    "source": [
     "By renaming the remaining sum in the denominator, we can find an abstract formulation of the RMS-Norm as a sequence of linear filters\n",
@@ -245,7 +222,15 @@
     " \n",
     " Which helps us develop terminology. The entire fraction is called the divisive norm on the filterbank-output $f$.  \n",
     " $G * N^2$ is the (local) energy, calculated as the convolution of $G$ the spatial weighting, and $N^2$ the Normcoefficient image squared.  \n",
-    "The Normcoefficient Image can be calculated in turn by computing the Normpool $W$ dotproduct against the same $f$ that we are normalizing.\n",
+    "The Normcoefficient Image can be calculated in turn by computing the Normpool $W$ dotproduct against the same $f$ that we are normalizing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c597a480",
+   "metadata": {},
+   "source": [
+    "Crucially the spatial weighting Filter G is $1/XY$ at each of its (2X,2Y) entries to assure that each pixel will take its average from the entire image. This requires that all edges be padded with the value 0, so that no unnecessary information gets included into the averaging\n",
     "   \n",
     "An implementation of this formulation can be found here:"
    ]
